# SlySerialize

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
SlySerialize/: __init__.py  _converter.py  _top_level.py  _type_vars.py  abc.py  asynch.py  converter.py  converters.py  de.py  jsontype.py  top_level.py  typevars.py
docs/: conf.py  index.md  ref.rst
tests/: test.py  test_async.py  test_common.py  test_readme.py  test_serialize.py
